# community-mini

./: .env  .gitignore  README.md  pyproject.toml  run.py
app/: main.py  models.py
app/alembic/versions/: 18dfdfa02a49_.py  71c5b2c8223c_.py  9d9db9f64cde_.py  c4dd07b87ca8_.py  fbc4f4695e54_.py
app/api/: deps.py  main.py
app/api/routes/: boards.py  login.py  posts.py  users.py
app/core/: config.py  security.py
app/crud/: board_crud.py  post_crud.py  user_crud.py
app/schemas/: board_schema.py  post_schema.py  user_schema.py
app/utils/: time.py  validators.py
